# earthdata-mcp

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  BootstrapLambdaDockerfile  BootstrapLambdaDockerfile.dockerignore  EmbeddingLambdaDockerfile  EmbeddingLambdaDockerfile.dockerignore  EnrichmentLambdaDockerfile  EnrichmentLambdaDockerfile.dockerignore  IngestLambdaDockerfile  IngestLambdaDockerfile.dockerignore  McpServerDockerfile  McpServerDockerfile.dockerignore  MigrationLambdaDockerfile  MigrationLambdaDockerfile.dockerignore  README.md  earthdata-mcp-deployed-package.tgz  loader.py  pyproject.toml  server.py
.continue/rules/: markdownlint-standards.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml
docs/: README.md
docs/consumers/: README.md  SUPPORTED_PARAMETERS.md
docs/developers/: adding-a-new-tool.md  adding-an-env-var.md  integration-testing.md  troubleshooting-deployments.md  versioning.md
lambdas/: README.md
lambdas/bootstrap/: handler.py  requirements.txt
lambdas/embedding/: handler.py  requirements.txt
lambdas/enrichment/: __init__.py  embed.py  fetch.py  fixer.py  handler.py  models.py  payload.py  requirements.txt  resolution.py  store.py  url_fix.py  url_validator.py  validate.py  warm_kms_cache.py
lambdas/enrichment/umm/: __init__.py  json_path.py  recommend_keywords.py  schema.py
lambdas/ingest/: handler.py  requirements.txt
lambdas/migration/: handler.py  requirements.txt
migrations/: 001_create_embeddings.sql  002_create_associations.sql  003_create_collections.sql  004_create_enrichment_log.sql  005_add_validation_columns.sql
models/: __init__.py  cmr.py  pagination.py
models/rag_eval/: __init__.py  evaluation.py
models/tools/: __init__.py  cmr_search.py  discover_data.py  get_citations.py  get_collections.py  get_granules.py  get_keywords.py  get_services.py  get_tools.py  get_variables.py
prompts/: instructions.py
rag_eval/: README.md  __init__.py  evals.py
rag_eval/evals/datasets/: earthdata_manual_sample.json
scripts/: integration_test.py
terraform/application/: main.tf  variables.tf
terraform/database/: main.tf  outputs.tf  variables.tf
terraform/modules/application/: alarms.tf  enrichment_lambdas.tf  iam.tf  lambda.tf  mcp-server.tf  outputs.tf  redis.tf  step_function_definition.json  variables.tf
terraform/modules/database/: lambda.tf  main.tf  outputs.tf  proxy.tf  variables.tf
terraform/modules/langfuse/: alb.tf  variables.tf
terraform/observability/: main.tf
terraform/scripts/: docker-build.sh
terraform/scripts/bamboo/: deploy-application.sh  deploy-database.sh  deploy-observability.sh  package-earthdata-mcp.sh  run-migrations.sh  unpackage-earthdata-mcp.sh
tests/: conftest.py  test_geospatial_embeddings.py  test_loader.py  test_server.py  test_temporal_ranges.py
tests/lambdas/: test_bootstrap_handler.py  test_embedding_handler.py  test_enrichment_embed.py  test_enrichment_embed_detailed.py  test_enrichment_fetch.py  test_enrichment_fix.py  test_enrichment_handler.py  test_enrichment_recommend_keywords.py  test_enrichment_resolution.py  test_enrichment_store.py  test_enrichment_url_fix.py  test_enrichment_url_validator.py  test_enrichment_validate.py  test_enrichment_warm_kms_cache.py  test_ingest_handler.py
tests/mocks/cmr/: collection_modis_sst.json
tests/models/: test_cmr.py  test_pagination.py
tests/rag_eval/: __init__.py  conftest.py  test_offline_evaluation.py
tests/tools/discover_data/: test_output_model.py  test_tool.py
tests/tools/get_citations/: test_get_citations_tool.py
tests/tools/get_collections/: test_get_collections_tool.py
tests/tools/get_granules/: test_get_granules_tool.py
tests/tools/get_keywords/: test_get_keywords_tool.py
tests/tools/get_services/: test_get_services_tool.py
tests/tools/get_tools/: test_get_tools_tool.py
tests/tools/get_variables/: test_get_variables_tool.py
tests/util/kms/: test_client.py
tests/utils/: test_cache.py  test_cmr_search_tools.py  test_database.py  test_embeddings.py  test_enrichment.py  test_environment.py  test_geometry.py  test_kms.py  test_langfuse.py  test_natural_language_geocoder.py  test_payload.py  test_resolution.py  test_spatial.py  test_ssm.py  test_temporal.py  test_umm_agent.py  test_umm_json_path.py  test_umm_schema.py  test_url_validator.py
tests/utils/cmr/: __init__.py  test_client.py  test_search_tools.py
tools/discover_data/: manifest.json  output_model.py  tool.py
tools/discover_data/models/: __init__.py  extraction.py
tools/discover_data/utils/: __init__.py  association_search.py  collection_hydration.py  collection_scoring.py  constraint_extraction.py  disambiguation.py  earthdata_search_links.py  embedding_search.py  extract_spatial_constraint.py  extract_temporal_constraint.py  granule_availability.py  llm_extraction.py  (+5 more)
tools/geospatial_embeddings/: manifest.json
tools/get_citations/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_collections/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_granules/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_keywords/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_services/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_tools/: __init__.py  manifest.json  output_model.py  tool.py
tools/get_variables/: __init__.py  manifest.json  output_model.py  tool.py
tools/models/: __init__.py  constraints.py  input_model.py  output_model.py
tools/temporal_ranges/: output_model.py  prompt.md
util/: bedrock.py  cache.py  database.py  enrichment.py  environment.py  geometry.py  langfuse.py  natural_language_geocoder.py  pagination.py  resolution.py  sfn.py  spatial.py  temporal.py
util/cmr/: __init__.py  client.py  extraction.py  search_tools.py
util/datastores/: __init__.py  base.py  postgres.py
util/embeddings/: base.py  bedrock.py  kms.py
util/kms/: __init__.py  client.py
util/rag_eval/: __init__.py  collection_formatting.py  ragas_utils.py
(+18 files in other folders)
