[project]
name = "earthdata-mcp"
version = "0.1.0"
description = "Basic FastMCP implementation for the Common Metadata Repository using Python."

readme = "README.md"

requires-python = "==3.13.0"
dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "earthaccess==0.14.0",
    "starlette==0.48.0",
    "uvicorn==0.37.0",
    "e84-geoai-common==0.0.7",
    "natural-language-geocoding==0.1.2",
    "python-dotenv==1.2.1",
    "python-toon==0.1.3",
    "psycopg[binary]==3.2.4",
    "pgvector==0.3.6",
    "redis==7.1.0",
    "langfuse==3.10.6",
    "instructor>=1.13.0",
    "jsonschema>=4.17.3",
    "ragas>=0.4.3",
    "litellm>=1.81.12",
    "nest-asyncio>=1.6.0",
    "boto3>=1.28.0",
    "jsonpath-ng>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.14.0",
    "moto[sqs,secretsmanager]==5.0.27",
    "responses==0.25.3",
    "pylint==3.0.0",
    "ruff==0.8.6",
    "pre-commit>=4.3.0",
]


[tool.pylint.messages_control]
disable = [
    "redefined-outer-name",
    "broad-exception-caught",
    "too-few-public-methods",
    "global-statement",  # Lambda singleton pattern for connection reuse
    "invalid-name",  # _client vars are intentionally lowercase (mutable singletons)
    "no-name-in-module",  # False positive for collections.abc.Generator
    "line-too-long",  # Handled by ruff; pylint flags strings/JSON which is unhelpful
    "protected-access",  # Tests legitimately access protected members
    "import-outside-toplevel",  # Tests use local imports for patching
    "too-many-locals",  # Handlers often need many locals
    "too-many-statements",  # Handlers often need many statements
    "fixme",  # TODO comments are acceptable during development
    "no-member",  # False positives with Pydantic FieldInfo and dynamic attributes
    "consider-iterating-dictionary",  # Sometimes explicit .keys() is clearer
    "duplicate-code",  # Test helpers share intentionally similar scaffolding
    "import-error",  # CI environment handles dependencies differently
    "too-many-public-methods",  # Test classes naturally have many test methods
    "too-many-lines",  # Test files can be long; modularity isn't always beneficial
    "use-implicit-booleaness-not-comparison",  # Explicit [] checks clearer in tests
    "too-many-branches",  # Complex logic in MCP client acceptable
    "too-many-nested-blocks",  # SSE parsing requires nested structure
]

[tool.pylint.design]
max-args = 6

[tool.pylint.main]
extension-pkg-allow-list = ["psycopg"]

[tool.pylint.typecheck]
# psycopg3 has type inference issues with pylint - "Class 'value' has no 'cursor' member"
# This is a known issue: https://github.com/pylint-dev/pylint/issues/7381
signature-mutators = ["psycopg.connect"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "-v"
]


[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*"
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".terraform",
    ".venv",
    "__pycache__",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["lambdas", "tools", "util", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.3",
]
